Refs #286059 - Technical Library search: fix empty description too much empty space.

--- a/src/components/Result/search-styles.less
+++ b/src/components/Result/search-styles.less
@@ -11,6 +11,10 @@ body.clmsSearchTechnicalLibrary-view {
     display: none;
   }
 
+  .listing-body p.listing-description {
+    min-height: 0px;
+  }
+
   .ui.secondary.pointing.content-section-tabs.menu {
     .active.item {
       border-color: @clms-primary;
